# CoreLib

./: .clang-format  .travis.yml  CMakeLists.txt  LICENSE  README.md
Headers/: Base.h  Lock.h  Looper.h  Message.h  RingBuffer.h  SharedMemory.h  Socket.h  StreamSocket.h  Utilities.h
Source/: Attachment.cpp  Attachment.h  AutoLock.h  Channel.cpp  Channel.h  Config.h  Layer.cpp  Layer.h  Looper.cpp  LooperSource.cpp  LooperSource.h  Message.cpp  NetworkUtilities.cpp  NetworkUtilities.h  RingBuffer.cpp  SeqPacketSocket.cpp  SeqPacketSocket.h  Server.cpp  Server.h  SharedMemory.cpp  Socket.cpp  Socket.h  StreamSocket.cpp  Utilities.cpp  WaitSet.cpp  WaitSet.h
Source/Apple/: LooperSource_Apple.cpp  WaitSet_Apple.cpp
Source/Linux/: LooperSource_Linux.cpp  WaitSet_Linux.cpp
Test/: AttachmentTest.cpp  ChannelTest.cpp  LooperTest.cpp  MessageDecoderTest.cpp  MessageEncoderTest.cpp  ServerTest.cpp  SharedMemoryTest.cpp  SocketTest.cpp  TestMain.cpp
